--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,14 +2,50 @@
 title: Le Wagon - Middleman
 ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/lille');">
+  <div class="banner-content">
+    <h1>Le Wagon Lille</h1>
+    <p>Learn to code with us in Lille</p>
+    <%= link_to "Start now", "/team.html", class: "btn btn-primary btn-lg" %>
   </div>
 </div>
+
+<div class="container">
+  <h3>Recent flats</h3>
+  <div class="row">
+    <div class="col-xs-6 col-md-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Le Wagon Shanghai</h2>
+          <p>Very cool city, the best</p>
+        </div>
+        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/lille');">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Le Wagon Lille</h2>
+          <p>Beautiful city</p>
+        </div>
+        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/skyclem59">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/rio');">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Le Wagon Rio</h2>
+          <p>A dream in South America</p>
+        </div>
+        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/adrien1987">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+  </div>
+</div>
+
