added CSS colors to over-ride Boostrap themes

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -39,10 +39,10 @@
 .navbar-wagon-link {
   color: #616668;
   font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: #da552f;
-  text-decoration: none;
+  &:hover {
+    color: $blue;
+    text-decoration: none;
+  }
 }
 
 /* Dropdown menu */
