--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -17,10 +17,12 @@
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
+  &:hover {
+    color: $yellow;
+    opacity: 1;
+  }
 }
-.footer-links a:hover {
-  opacity: 1;
-}
+
 .footer .fa-heart {
-  color: #D23333;
+  color: $yellow;
 }
