--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -2,9 +2,9 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: rgb(50, 177, 189);
 $yellow: #FDB631;
-$orange: #E67E22;
+$orange: rgb(239, 203, 65);
 $green: #32B796;
-$gray: #000000;
-$light-gray: #F4F4F4;
+$gray: rgb(200, 200, 200);
+$light-gray: rgb(220, 220, 220);
