--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -6,7 +6,7 @@
   <body>
     <div class="navbar-wagon">
       <!-- Logo -->
-      <a href="/" class="navbar-wagon-brand">
+      <a href="https://sharrylucie.github.io/middleman-airbnb/" class="navbar-wagon-brand">
         <img src="images/logo.png" alt="logo">
       </a>
 
